--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -1,6 +1,6 @@
 .navbar
 {
-    background-color: #712e0d !important;
+    background-color: #162732 !important;
     width: auto;
     color: white !important;
 }
