--- a/frontend/src/components/Footer/Footer.css
+++ b/frontend/src/components/Footer/Footer.css
@@ -17,12 +17,12 @@
 
 .fa
 {
-  color: #712e0d !important;
+  color: #162732 !important;
 }
 
 .site-footer
 {
-  background-color:#712e0d !important;
+  background-color:#162732 !important;
   padding:45px 0 20px;
   font-size:15px;
   line-height:24px;
@@ -51,7 +51,7 @@
 }
 .site-footer a:hover
 {
-  color:#712e0d !important;
+  color:#162732 !important;
   text-decoration:none;
 }
 .footer-links
@@ -69,7 +69,7 @@
 }
 .footer-links a:active,.footer-links a:focus,.footer-links a:hover
 {
-  color:#712e0d !important;
+  color:#162732 !important;
   text-decoration:none;
 }
 .footer-links.inline li
