--- a/frontend/src/components/Footer/Footer.css
+++ b/frontend/src/components/Footer/Footer.css
@@ -43,7 +43,7 @@
   font-size:16px;
   text-transform:uppercase;
   margin-top:5px;
-  letter-spacing:2px
+  letter-spacing:12px
 }
 .site-footer a
 {
@@ -85,7 +85,7 @@
   width:40px;
   height:40px;
   line-height:40px;
-  margin-left:6px;
+  margin-left:16px;
   margin-right:0;
   border-radius:100%;
   background-color:#33353d
@@ -181,5 +181,28 @@
     display:block;
     margin-right:0;
     font-weight:600
+  }
+}
+
+
+.social-icon {
+  margin: 10px 0;
+  text-align: center;
+}
+
+.social-icon a {
+  display: inline-block;
+  padding: 1px;
+  
+  
+}
+
+.social-icon a i {
+  color: #fff;
+}
+
+@media (max-width: 70px) {
+  .social-icon a {
+    padding: 1px;
   }
 }
