--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -27,6 +27,10 @@
     color: white;
 }
 
+.mr-auto{
+    position: absolute;
+    right: 100px;
+}
 
 @media only screen and (min-width: 992px) {
     .navbar {
@@ -34,10 +38,10 @@
     }
     .cart {
         float: right !important;
-        margin-left: 80rem !important;
+        /* margin-left: 80rem !important; */
         color: white !important;
         font-size: 14px !important;
-        font-size: 14px;
+        
     }
     .remove-space {
         float: right !important;
